<resources>
    <string name="app_name">Cool Mic</string>
    <string name="save">Save</string>
    <string name="timer_format">%1$02d:%2$02d:%3$02d</string>
    <string name="timerValue">00:00:00</string>
    <string name="timer">Timer:</string>
    <string name="start_broadcast">Start Livestream</string>
    <string name="stop_broadcast">Stop Livestream</string>
    <string name="broadcasting">You Are Live - Tap to Stop</string>
    <string name="img_content">Cool Mic Logo</string>
    <string name="description_pbGainMeterLeft">Gain for left channel</string>
    <string name="description_pbGainMeterRight">Gain for right channel</string>
    <string name="description_pbVuMeterRight">VU-Meter for left channel</string>
    <string name="description_pbVuMeterLeft">VU-Meter for right channel</string>
    <string name="description_rbPeakLeft">Peak indicator for left channel</string>
    <string name="description_rbPeakRight">Peak indicator for right channel</string>
    <string name="sample_rate">Sample Rate</string>
    <string name="channel_configuration">Channel Configuration</string>
    <string name="quality_level">Quality Level</string>
    <string name="settings_title">Title</string>
    <string name="settings_artist">Artist</string>
    <string name="settings_genre">Genre</string>
    <string name="settings_server">Server</string>
    <string name="settings_username">Username</string>
    <string name="settings_password">Password</string>
    <string name="settings_show_password">Show Password</string>
    <string name="settings_mountpoint">Mountpoint</string>
    <string name="settings_mountpoints">mountpoints</string>
    <string name="lblListeners">Listeners:</string>
    <string name="txtListeners">0 ( Max: 0 )</string>
    <string name="formatListeners">%1$d ( Max: %2$d )</string>
    <string name="txtStateFormat">%1$s%2$s</string>
    <string name="txtStateFormatError"> ( Error: %1$d )</string>
    <string name="cmd_connection_qrcode">Scan QRCode</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_track_metadata">Track Metadata</string>
    <string name="pref_title_edit_trackmetadata">Edit Track Metadata</string>
    <string name="pref_header_station_metadata">Station Metadata</string>
    <string name="pref_title_station_metadata_name">Name</string>
    <string name="pref_title_station_metadata_genre">Genre</string>
    <string name="pref_title_station_metadata_url">URL</string>
    <string name="pref_title_station_metadata_description">Description</string>
    <string name="pref_title_station_metadata_irc">IRC</string>
    <string name="pref_default_station_metadata_name"></string>
    <string name="pref_default_station_metadata_genre"></string>
    <string name="pref_default_station_metadata_url"></string>
    <string name="pref_default_station_metadata_description"></string>
    <string name="pref_default_station_metadata_irc"></string>
    <string name="pref_header_connection">Connection</string>
    <string name="pref_title_connection_address">Server</string>
    <string name="pref_title_connection_username">Username</string>
    <string name="pref_title_connection_mountpoint">Mountpoint</string>
    <string name="pref_title_connection_password">Password</string>
    <string name="pref_default_connection_address">source.coolmic.net:80</string>
    <string name="pref_default_connection_username">coolmic</string>
    <string name="pref_default_connection_password">12345</string>
    <string name="pref_default_connection_mountpoint">cmts01-%1$s.opus</string>
    <string name="pref_header_audio">Audio</string>
    <string name="pref_title_audio_codec">Codec</string>
    <string name="pref_title_audio_samplerate">Samplerate</string>
    <string name="pref_title_audio_channels">Channel Configuration</string>
    <string name="pref_title_audio_quality">Quality Level</string>
    <string name="pref_default_audio_codec">audio/ogg; codec=opus</string>
    <string name="pref_default_audio_samplerate">48000</string>
    <string name="pref_default_audio_channels">1</string>
    <string name="pref_default_audio_quality">-0.1</string>
    <string name="prefs_header_utilities">Utilities</string>
    <string name="pref_title_utility_connection_default">Use Cool Mic Test Server</string>
    <string name="pref_title_utility_qr_scan">QR Code Scan</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_station_metadata">Station metadata</string>
    <string name="menu_action_track_metadata">Track metadata</string>
    <string name="menu_action_help">Help</string>
    <string name="menu_action_quit">Quit</string>
    <string name="menu_action_about">About</string>
    <string name="menu_action_devel_permission_check">Permission Check</string>
    <string name="menu_action_devel_reset_dialogs">Restore Hidden Dialogs</string>
    <string name="menu_action_devel_reset_dialogs_done">Hidden Dialogs Restored</string>
    <string name="menu_action_default">No appropriate menu action</string>
    <string name="popup_about_cmd_dismiss">Dismiss</string>
    <string name="popup_about_lbl_version">Version:</string>
    <string name="popup_about_lbl_buildtype">Build Type:</string>
    <string name="popup_about_lbl_git_branch">GIT Branch:</string>
    <string name="popup_about_lbl_git_revision">GIT Commit:</string>
    <string name="popup_about_lbl_git_dirty">GIT Dirty:</string>
    <string name="popup_about_lbl_api_level">API Level:</string>
    <string name="popup_about_lbl_system_arch">System architecture:</string>
    <string name="popup_about_developer_mode">Developer mode</string>
    <string name="aboutactivity_copy_string">Cool Mic App Report\nVersion: %1$s\nBuild Type: %2$s\nGIT Branch: %3$s\nGIT Revision: %4$s\nGIT Dirty: %5$s\nAPI Level: %6$d\nSystem architecture: %7$s</string>
    <string name="aboutactivity_copy_string_debug">%1$s\nDeveloper mode: %2$b\nCurrent Profile: %3$s\nSample Rate: %4$d\nChannels: %5$d\nCodec: %6$s\nQuality: %7$.5f\nVU-Meter interval: %8$d\nAudio volume left: %9$d\nAudio volume: right: %10$d\nCMTS: %11$b</string>
    <string name="aboutactivity_copied_string">Cool Mic Report copied to clipboard</string>
    <string-array name="pref_titles_audio_channels">
        <item>Mono (1 Channel)</item>
        <item>Stereo (2 Channels)</item>
    </string-array>
    <string-array name="pref_titles_audio_codec">
        <item>Ogg/Opus</item>
        <item>Ogg/Vorbis</item>
    </string-array>
    <string-array name="pref_values_audio_samplerate">
        <item>8000</item>
        <item>11025</item>
        <item>16000</item>
        <item>22050</item>
        <item>44100</item>
        <item>48000</item>
    </string-array>
    <string-array name="pref_values_audio_codec">
        <item>audio/ogg; codec=opus</item>
        <item>audio/ogg; codec=vorbis</item>
    </string-array>
    <string-array name="pref_values_audio_channels">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="pref_values_audio_quality">
        <item>-0.1</item>
        <item>0</item>
        <item>0.1</item>
        <item>0.2</item>
        <item>0.3</item>
        <item>0.4</item>
        <item>0.5</item>
        <item>0.6</item>
        <item>0.7</item>
        <item>0.8</item>
        <item>0.9</item>
        <item>1</item>
    </string-array>
    <string name="pref_header_vumeter">VU-Meter</string>
    <string name="pref_title_vumeter_interval">Interval</string>
    <string name="pref_default_vumeter_interval">40</string>
    <string name="mainactivity_broadcast_url_copied">Livestream URL copied to clipboard</string>
    <string name="mainactivity_broadcast_url_not_copied">Can not copy Livestream URL to clipboard</string>
    <string name="mainactivity_broadcast_url_not_shared">Can not share Livestream URL</string>
    <string name="mainactivity_connectiondetails_unset">Set the connection details</string>
    <string name="mainactivity_callback_error">there was an error! Error: %1$s</string>
    <string name="mainactivity_callback_error_invalid_server">Server address invalid.</string>
    <string name="mainactivity_callback_streamstate">Stream State: State: %1$d Error: %2$d</string>
    <string name="question_stop_broadcasting">Stop Livestream?</string>
    <string name="exception_start_failed">Failed to start Livestream: %1$d</string>
    <string name="exception_failed_metadata_quality">Failed to set Metadata or Quality: %1$d</string>
    <string name="exception_failed_reconnect">Could not set Reconnection Mode: %1$d</string>
    <string name="exception_failed_start_general">"Failed to start Livestream. "</string>
    <string name="settings_conn_defaults_loaded">Cool Mic Test Server Data Loaded</string>
    <string name="lblState">State:</string>
    <string name="txtState">N/A</string>
    <string-array name="pref_titles_vumeter_interval">
        <item>Very Fast</item>
        <item>Fast</item>
        <item>Normal</item>
        <item>Slow</item>
        <item>Very Slow</item>
        <item>Disabled</item>
    </string-array>
    <string-array name="pref_values_vumeter_interval">
        <item>10</item>
        <item>20</item>
        <item>40</item>
        <item>60</item>
        <item>80</item>
        <item>0</item>
    </string-array>
    <string name="coolmic_error_p0">No error</string>
    <string name="coolmic_error_n1">Generic, unknown error</string>
    <string name="coolmic_error_n8">Function not implemented</string>
    <string name="coolmic_error_n9">Bad address</string>
    <string name="coolmic_error_n10">Invalid argument</string>
    <string name="coolmic_error_n11">Not enough space</string>
    <string name="coolmic_error_n12">Device or resource busy</string>
    <string name="coolmic_error_n13">Operation not permitted</string>
    <string name="coolmic_error_n14">Connection refused</string>
    <string name="coolmic_error_n15">Connected.</string>
    <string name="coolmic_error_n16">Unconnected.</string>
    <string name="coolmic_error_n17">TLS requested but not supported by peer</string>
    <string name="coolmic_error_n18">LS connection can not be established because of bad certificate</string>
    <string name="coolmic_error_n19">Invalid request code</string>
    <string name="coolmic_error_n20">Retry last action</string>
    <string name="coolmic_cs_n1">Invalid</string>
    <string name="coolmic_cs_p1">Connecting</string>
    <string name="coolmic_cs_p2">Connected</string>
    <string name="coolmic_cs_p3">Disconnecting</string>
    <string name="coolmic_cs_p4">Disconnected</string>
    <string name="coolmic_cs_p5">Con. Error</string>
    <string name="broadcast_stop_message">Livestream stopped</string>
    <string name="coolmic_help_url">http://coolmic.net/help</string>
    <string name="coolmic_back_message">Tap [ OK ] to stop Livestream.</string>
    <string name="aboutactivity_cmd_about_copy">Copy to Clipboard</string>
    <string name="aboutactivity_cmd_about_copy_debug">Copy debug information to Clipboard</string>
    <string name="settingsactivity_url_invalid">Please scan a valid URI</string>
    <string name="settingsactivity_qrcode_loaded">Loaded settings from QR code</string>
    <string name="settingsactivity_toast_permissions_granted">All required permissions granted</string>
    <string name="settingsactivity_permissions_all_granted">All permissions granted! Thank you</string>
    <string name="settingsactivity_permission_not_granted">Permission %1$s was not granted</string>
    <string name="settingsactivity_cannot_get_mountpoint">Can not get mountpoint, ignoring.</string>
    <string name="popup_about_lbl_buildts">Build TS:</string>
    <string name="menu_action_share">Share Stream</string>
    <string name="aboutactivity_cmd_about_open_pp">Open Privacy Policy(Browser)</string>
    <string name="aboutactivity_cmd_about_open_licenses">Open (Third Party) License Declaration(Browser)</string>
</resources>