<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="@string/pref_default_connection_address"
        android:inputType="text"
        android:key="connection_address"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_connection_address" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_connection_username"
        android:inputType="text"
        android:key="connection_username"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_connection_username" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_connection_password"
        android:inputType="textPassword"
        android:key="connection_password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_connection_password" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_connection_mountpoint"
        android:inputType="text"
        android:key="connection_mountpoint"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_connection_mountpoint" />

</PreferenceScreen>
