<!--
  ~      Copyright (C) Jordan Erickson                     - 2014-2020,
  ~      Copyright (C) Löwenfelsen UG (haftungsbeschränkt) - 2015-2020
  ~       on behalf of Jordan Erickson.
  ~
  ~ This file is part of Cool Mic.
  ~
  ~ Cool Mic is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Cool Mic is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Cool Mic.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_action_share"
        android:title="@string/menu_action_share" />
    <item
        android:id="@+id/menu_action_settings"
        android:orderInCategory="10"
        android:title="@string/menu_action_settings" />
    <item
        android:id="@+id/menu_action_about"
        android:orderInCategory="15"
        android:title="@string/menu_action_about" />
    <item
        android:id="@+id/menu_action_help"
        android:orderInCategory="20"
        android:title="@string/menu_action_help" />
    <item
        android:id="@+id/menu_action_quit"
        android:orderInCategory="30"
        android:title="@string/menu_action_quit" />
    <!-- goto 10 -->
</menu> 