<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="@string/pref_default_audio_samplerate"
        android:entries="@array/pref_values_audio_samplerate"
        android:entryValues="@array/pref_values_audio_samplerate"
        android:key="audio_samplerate"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_audio_samplerate" />

    <ListPreference
        android:defaultValue="@string/pref_default_audio_channels"
        android:entries="@array/pref_titles_audio_channels"
        android:entryValues="@array/pref_values_audio_channels"
        android:key="audio_channels"
        android:title="@string/pref_title_audio_channels" />

    <ListPreference
        android:defaultValue="@string/pref_default_audio_quality"
        android:entries="@array/pref_values_audio_quality"
        android:entryValues="@array/pref_values_audio_quality"
        android:key="audio_quality"
        android:title="@string/pref_title_audio_quality" />

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <!--<Preference android:title="@string/pref_title_system_sync_settings">-->
        <!--<intent android:action="android.settings.SYNC_SETTINGS" />-->
    <!--</Preference>-->


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<ListPreference-->
        <!--android:defaultValue="-1"-->
        <!--android:entries="@array/pref_example_list_titles"-->
        <!--android:entryValues="@array/pref_example_list_values"-->
        <!--android:key="example_list"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null"-->
        <!--android:title="@string/pref_title_add_friends_to_messages" />-->


</PreferenceScreen>
