<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="cc.echonet.coolmicapp.AboutActivity"
    android:theme="@style/AppTheme">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_about_lbl_version" />

            <TextView
                android:id="@+id/txtVersion"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblBuildType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_about_lbl_buildtype" />

            <TextView
                android:id="@+id/txtBuildType"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblBuildTS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_about_lbl_buildts" />

            <TextView
                android:id="@+id/txtBuildTS"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblGITBranch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_about_lbl_git_branch" />

            <TextView
                android:id="@+id/txtGITBranch"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:layout_weight="1"  />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblGITRevision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_about_lbl_git_revision" />

            <TextView
                android:id="@+id/txtGITRevision"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:layout_weight="1"   />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblGITDirty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_about_lbl_git_dirty" />

            <TextView
                android:id="@+id/txtGITDirty"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </TableRow>
    </TableLayout>

    <Button
        android:text="@string/aboutactivity_cmd_about_copy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cmdAboutCopy"
        android:gravity="center" />

    <Button
        android:text="@string/aboutactivity_cmd_about_open_pp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cmdOpenPrivacyPolicy"
        android:gravity="center" />

    <Button
        android:text="@string/aboutactivity_cmd_about_open_licenses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cmdOpenLicenses"
        android:gravity="center" />

</LinearLayout>
