<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="false">

    <LinearLayout
        android:id="@+id/main_linear_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

            <LinearLayout
                android:id="@+id/available_qualities_layout"
                android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="fill_vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ProgressBar
                android:id="@+id/vertical_progressbar"
                android:layout_width="20dip"
                android:layout_height="fill_parent"
                style="@style/Widget.ProgressBar.Vertical"
                />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="fill_parent"
                    android:layout_height="270dp"
                    android:onClick="onImageClick"
                    android:src="@drawable/mic"
                    android:contentDescription="@string/img_content"
                    android:layout_weight="2" />
            <ProgressBar
                android:id="@+id/vertical_progressbar2"
                android:layout_width="20dip"
                android:layout_height="match_parent"
                style="@style/Widget.ProgressBar.Vertical" />
        </LinearLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:rowCount="2">

            <TextView
                android:id="@+id/timer"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/timer"
                android:textColor="#ffffff"
                android:textSize="20sp"

                />

            <TextView
                android:id="@+id/timerValue"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/timerValue"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblListeners"
                android:layout_width="100dp"

                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/lblListeners"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtListeners"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txtListeners"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </GridLayout>


        <Button
            android:id="@+id/start_recording_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startRecording"
            android:text="@string/start_broadcast" />

        <Button
            android:id="@+id/stop_recording_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="stopRecording"
            android:text="@string/stop_broadcast" />

        <TextView
            android:id="@+id/log_area"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />

    </LinearLayout>
    </LinearLayout>
</ScrollView>
