<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_about_lbl_version" />

            <TextView
                android:id="@+id/txtVersion"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblBuildType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_about_lbl_buildtype" />

            <TextView
                android:id="@+id/txtBuildType"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblGITBranch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_about_lbl_git_branch" />

            <TextView
                android:id="@+id/txtGITBranch"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblGITRevision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_about_lbl_git_revision" />

            <TextView
                android:id="@+id/txtGITRevision"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:measureWithLargestChild="false">

            <TextView
                android:id="@+id/lblGITAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_about_lbl_git_author" />

            <TextView
                android:id="@+id/txtGITAuthor"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblGITDirty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_about_lbl_git_dirty" />

            <TextView
                android:id="@+id/txtGITDirty"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/cmdPopUpDismiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_about_cmd_dismiss" />
</LinearLayout>